fix(ui): horizontal scrolling ux

--- a/src/routes/layout.scss
+++ b/src/routes/layout.scss
@@ -84,4 +84,5 @@ body {
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
